--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <p>已有帐号？<span class="login_btn">登录</span></p>
     <br>
     
-    <label>用户名</label> 
+    <label>用户</label> 
     <input id="user" type="text" placeholder="请设置用户名">
     <br>
     <div id="user-message"></div>
